--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
   cached_network_image: ^3.3.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
